--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <html>
-    <head>
+<head>
+        <meta name="viewport" content="with=device-width, initial-scale=1.0">
+        <title>aespa</title>
+        <link rel="stylesheet" href="style.css"
+</head>
+<body>
+    <section class="header"></section>
 
-    </head>
-    <body>
-        <h1>aespa</h1>
         
     </body>
 </html>
