start of design

--- a/index.html
+++ b/index.html
@@ -1,12 +1,40 @@
+<!DOCTYPE html>
 <html>
 <head>
-        <meta name="viewport" content="with=device-width, initial-scale=1.0">
-        <title>aespa</title>
-        <link rel="stylesheet" href="style.css"
+    <meta name="viewport" content="with=device-width, initial-scale=1.0">
+    <title>aespa</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <section class="header"></section>
+    <section class="header">
+        <nav>
+            <a href="index.html"><img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/Aespa_logo.jpg"></a>
+            <div class="nav-links">
+                <i class="fa fa-times"></i>
 
-        
-    </body>
+                <ul>
+                    <li><a href="">HOME</a></li>
+                    <li><a href="">DISCOGRAPHY</a></li>
+                    <li><a href="">MERCHANDISE</a></li>
+                </ul>
+            </div>
+            <i class="fa fa-bars"></i>
+        </nav>
+
+<div class="text-box">
+    <p>The meaning of aespa has multiple meanings, with the use of ae standing for both "Avatar X Experience"<br> as well as becoming an "aspect" being both sides. Another 
+        meaning of aespa is meeting another avatar of yourself <br>and experiencing a new world,
+        "you always perform at your best despite fear and doubts", and "beauty & aesthetic".
+    </p>
+    <a href="" class="hero-btn">Visit us to know more!</a>
+</div>
+
+    </section>
+
+
+</body>
 </html>
