--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 
                 <ul>
                     <li><a href="">HOME</a></li>
-                    <li><a href="">ABOUT US</a></li>
                     <li><a href="">DISCOGRAPHY</a></li>
                     <li><a href="">MERCHANDISE</a></li>
                 </ul>
@@ -27,7 +26,7 @@
         </nav>
 
 <div class="text-box">
-    <p>The meaning of aespa has multiple meanings, with the use of ae standing for both "Avatar X Experience"<br> as well as becoming an "aspect" being both sides. Another 
+    <p>The meaning of aespa has multiple meanings, with the use of æ standing for both "Avatar X Experience"<br> as well as becoming an "aspect" being both sides. Another 
         meaning of aespa is meeting another avatar of yourself <br>and experiencing a new world,
         "you always perform at your best despite fear and doubts", and "beauty & aesthetic".
     </p>
@@ -35,6 +34,23 @@
 </div>
 
 </section>
+
+<!--course-->
+<section class="members">
+    <h1>Members</h1>
+    <p>Be MY æ! Hello, we are aespa!</p>
+
+    <div class="row">
+        <div class="picture">
+            <img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/karina.jpg">
+        </div>
+    </div>
+
+
+</section>
+
+
+
 
 
 
