--- a/index.html
+++ b/index.html
@@ -41,15 +41,47 @@
     <p>Be MY æ! Hello, we are aespa!</p>
 
     <div class="row">
-        <div class="picture">
+        <div class="mem-pic">
             <img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/karina.jpg">
+            <div class="layer">
+                <h3>KARINA<br>
+                    <br>Birth Name: Yu Ji Min (유지민)
+                    <br>Birthday: April 11, 2000
+                </h3>
+                
+            </div>
+        </div>
+        <div class="mem-pic">
+            <img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/winter.jpg">
+            <div class="layer">
+                <h3>WINTER<br>
+                <br>Birth Name: Kim Min Jeong (김민정)
+                <br>Birthday: January 1, 2001
+                </h3>
+            </div>
+        </div>
+        <div class="mem-pic">
+            <img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/giselle.jpg">
+            <div class="layer">
+                <h3>GISELLE<br>
+                <br>Birth Name: Uchinaga Aeri (うちながえり/우치나가에리)
+                <br>Birthday: October 30, 2000
+                </h3>
+            </div>
+        </div>
+        <div class="mem-pic">
+            <img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/ningning.jpg">
+            <div class="layer">
+                <h3>NING NING<br>
+                <br>Birth Name: Ning Yizhuo (宁艺卓)
+                <br>Birthday: October 23, 2002
+                </h3>
+            </div>
         </div>
     </div>
 
 
 </section>
-
-
 
 
 
