--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta name="viewport" content="with=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>aespa</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,9 +17,9 @@
                 <i class="fa fa-times" onclick="hideMenu()"></i>
 
                 <ul>
-                    <li><a href="">HOME</a></li>
-                    <li><a href="">DISCOGRAPHY</a></li>
-                    <li><a href="">MERCHANDISE</a></li>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="Discography.html">DISCOGRAPHY</a></li>
+                    <li><a href="Merchandise.html">MERCHANDISE</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -30,7 +30,13 @@
         meaning of aespa is meeting another avatar of yourself <br>and experiencing a new world,
         "you always perform at your best despite fear and doubts", and "beauty & aesthetic".
     </p>
-    <a href="" class="members-button">Click here to know more about us</a>
+
+
+<div class="text-box2">
+    <h2>
+        Scroll down to find out more about us!
+    </h2>
+
 </div>
 
 </section>
@@ -91,11 +97,12 @@
 
     var navLinks = document.getElementById("navLinks");
 
-    function showMenu(){
+    function showMenu() {
         navLinks.style.right = "0";
 }
-    function hideMenu(){
-        navLinks.style.right = "-200px";
+
+    function hideMenu() {
+        navLinks.style.right = "-250px";
 }
 
 </script>
@@ -103,3 +110,4 @@
 
 </body>
 </html>
+
