discography video and images

--- a/Discography.html
+++ b/Discography.html
@@ -14,11 +14,7 @@
         <div class="video-container">
             <iframe width="1000" height="600" src="https://www.youtube.com/embed/D8VEhcPeSlc?si=myTXGMZFSZByMRE_"title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
-
-        <div class="text-box3">
-            <h1>DISCOGRAPHY</h1>
-        </div>
-
+        <h1>DISCOGRAPHY</h1>
         <nav>
             <a href="index.html"><img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/Aespa_logo.jpg"></a>
             <div class="nav-links" id="navLinks">
@@ -31,7 +27,21 @@
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
-    </body>
+</section>
+
+
+<section>
+
+    <div class="disco-img">
+        <div class="drama-img">
+        <img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/aespa_M04_Drama_DC-.png">
+        </div>
+
+    </div>
+
+
+
+
 </section>
 
 <!--javascript for the menu-->
@@ -48,3 +58,6 @@
 }
 
 </script>
+
+</html>
+</body>
