changed logo to bring users to the youtube channel

--- a/Discography.html
+++ b/Discography.html
@@ -15,7 +15,7 @@
             <iframe width="1000" height="600" src="https://www.youtube.com/embed/D8VEhcPeSlc?si=myTXGMZFSZByMRE_"title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <nav>
-            <a href="index.html"><img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/Aespa_logo.jpg"></a>
+            <a href="https://www.youtube.com/@aespa"><img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/Aespa_logo.jpg"></a>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
@@ -40,7 +40,7 @@
     </div>
 
     <div class="disco-background">
-        
+    
 
         <div class="album-img">
 
