--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <section class="header">
         <nav>
-            <a href="index.html"><img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/Aespa_logo.jpg"></a>
+            <a href="https://www.youtube.com/@aespa"><img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/Aespa_logo.jpg"></a>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
