add some changes and socials

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+
 </head>
 <body>
     <section class="header">
@@ -42,8 +44,9 @@
 
 <!--course-->
 <section class="members">
-    <h1>Members</h1>
-    <p>Be MY æ! Hello, we are aespa!</p>
+    <p>Be MY æ! Hello, we are aespa!</p><br><br><br>
+    <h1>Members</h1><br>
+
 
     <div class="row">
         <div class="mem-pic">
@@ -53,7 +56,6 @@
                     <br>Birth Name: Yu Ji Min (유지민)
                     <br>Birthday: April 11, 2000
                 </h3>
-                
             </div>
         </div>
         <div class="mem-pic">
@@ -87,6 +89,26 @@
 
 
 </section>
+
+<section>
+
+    <div class="socialsbg">
+        <h2>Socials</h2>
+    <div class="socialsicon">
+        <a href="https://www.facebook.com/aespa.official"><i class="fa-brands fa-facebook-f fa-2xl" style="color: #93c4c9;"></i></a>
+        <a href="https://www.instagram.com/aespa_official/?hl=en"><i class="fa-brands fa-instagram fa-2xl" style="color: #9ec4c9;"></i></a>
+        <a href="https://twitter.com/aespa_official?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><i class="fa-brands fa-twitter fa-2xl" style="color: #9ec4c9;"></i></i></a>
+        <a href="https://www.tiktok.com/@aespa_official"><i class="fa-brands fa-tiktok fa-2xl" style="color: #9ec4c9;"></i></a>
+        <a href="https://www.youtube.com/channel/UC9GtSLeksfK4yuJ_g1lgQbg"><i class="fa-brands fa-youtube fa-2xl" style="color: #9ec4c9;"></i></a>
+        <a href="https://open.spotify.com/artist/6YVMFz59CuY7ngCxTxjpxE"><i class="fa-brands fa-itunes fa-2xl" style="color: #9ec4c9;"></i></a>
+        <a href="https://open.spotify.com/artist/6YVMFz59CuY7ngCxTxjpxE"><i class="fa-brands fa-spotify fa-2xl" style="color: #9ec4c9;"></i></a>
+    </div>
+</div>
+
+</section>
+
+
+
 
 
 
