--- a/Merchandise.html
+++ b/Merchandise.html
@@ -6,16 +6,16 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <section class="header">
+        </div>
         <nav>
             <a href="https://www.youtube.com/@aespa"><img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/Aespa_logo.jpg"></a>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
-
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="Discography.html">DISCOGRAPHY</a></li>
@@ -24,3 +24,31 @@
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
+</section>
+
+    <div class="main-text">
+    <h1>MERCHANDISE</h1>
+    </div>
+
+
+
+
+
+
+<!--javascript for the menu-->
+<script>
+
+    var navLinks = document.getElementById("navLinks");
+
+    function showMenu() {
+        navLinks.style.right = "0";
+}
+
+    function hideMenu() {
+        navLinks.style.right = "-250px";
+}
+
+</script>
+
+</html>
+</body>
