--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
-
+<br><br>
 <div class="text-box">
     <p>The meaning of aespa has multiple meanings, with the use of æ standing for both "Avatar X Experience"<br> as well as becoming an "aspect" being both sides. Another 
         meaning of aespa is meeting another avatar of yourself <br>and experiencing a new world,
         "you always perform at your best despite fear and doubts", and "beauty & aesthetic".
     </p>
-
+<br><br><br><br><br>
 
 <div class="text-box2">
     <h2>
@@ -107,12 +107,6 @@
 
 </section>
 
-
-
-
-
-
-
 <!--javascript for the menu-->
 <script>
 
@@ -127,6 +121,27 @@
 }
 
 </script>
+
+
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
+<script>
+    $(document).ready(function(){
+      $(".socialsicon a").hover(
+        function() {
+          $(this).find("i").css("color", "#ffffff");
+        },
+        function() {
+          $(this).find("i").css("color", "#9ec4c9");
+        }
+      );
+    });
+</script>
+
+
+
+
+
 
 
 </body>
