started designing merchandise page with pictures

--- a/Discography.html
+++ b/Discography.html
@@ -5,10 +5,11 @@
     <title>aespa</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
 </head>
 <body>
@@ -71,7 +72,7 @@
 
 <section>
 
-    <div class="socialsbg">
+    <div class="socialsbg1">
         <h2>Socials</h2>
     <div class="socialsicon">
         <a href="https://www.facebook.com/aespa.official"><i class="fa-brands fa-facebook-f fa-2xl" style="color: #93c4c9;"></i></a>
