--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title>aespa</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
 </head>
 <body>
@@ -50,7 +50,7 @@
 
     <div class="row">
         <div class="mem-pic">
-            <img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/karina.jpg">
+            <img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/karina.jpg"><alt></alt>
             <div class="layer">
                 <h3>KARINA<br>
                     <br>Birth Name: Yu Ji Min (유지민)
