--- a/Discography.html
+++ b/Discography.html
@@ -80,7 +80,7 @@
         <a href="https://twitter.com/aespa_official?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><i class="fa-brands fa-twitter fa-2xl" style="color: #9ec4c9;"></i></i></a>
         <a href="https://www.tiktok.com/@aespa_official"><i class="fa-brands fa-tiktok fa-2xl" style="color: #9ec4c9;"></i></a>
         <a href="https://www.youtube.com/channel/UC9GtSLeksfK4yuJ_g1lgQbg"><i class="fa-brands fa-youtube fa-2xl" style="color: #9ec4c9;"></i></a>
-        <a href="https://open.spotify.com/artist/6YVMFz59CuY7ngCxTxjpxE"><i class="fa-brands fa-itunes fa-2xl" style="color: #9ec4c9;"></i></a>
+        <a href="https://music.apple.com/us/artist/aespa/1540251304"><i class="fa-brands fa-itunes fa-2xl" style="color: #9ec4c9;"></i></a>
         <a href="https://open.spotify.com/artist/6YVMFz59CuY7ngCxTxjpxE"><i class="fa-brands fa-spotify fa-2xl" style="color: #9ec4c9;"></i></a>
     </div>
 </div>
