buy now button hover effect

--- a/Merchandise.html
+++ b/Merchandise.html
@@ -51,9 +51,7 @@
                     <p class="description">The 4th Mini Album 'Drama' - Giant Version</p>
                 </div>
 
-                <a href" "><button class="buy-now-btn">Buy Now</button></a>
-                <a href" "><button class="buy-now-btn">Buy Now</button></a>
-                <a href" "><button class="buy-now-btn">Buy Now</button></a>
+                <a href="https://weverseshop.io/en/shop/GL_USD/artists/133/categories/2498"><button class="buy-now-btn">Buy Now</button></a>
 
                 </div>
               
