made the shop workable

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                 <h3>KARINA<br>
                     <br>Birth Name: Yu Ji Min (유지민)
                     <br>Birthday: April 11, 2000
+                    <br>Position: Leader, Dancer, Vocalist, Rapper, Visual
                 </h3>
             </div>
         </div>
@@ -64,6 +65,7 @@
                 <h3>WINTER<br>
                 <br>Birth Name: Kim Min Jeong (김민정)
                 <br>Birthday: January 1, 2001
+                <br>Position: Vocalist, Dancer
                 </h3>
             </div>
         </div>
@@ -73,6 +75,7 @@
                 <h3>GISELLE<br>
                 <br>Birth Name: Uchinaga Aeri (うちながえり/우치나가에리)
                 <br>Birthday: October 30, 2000
+                <br>Position: Rapper, Vocalist
                 </h3>
             </div>
         </div>
@@ -82,6 +85,7 @@
                 <h3>NING NING<br>
                 <br>Birth Name: Ning Yizhuo (宁艺卓)
                 <br>Birthday: October 23, 2002
+                <br>Position: Main Vocalist, Maknae
                 </h3>
             </div>
         </div>
