--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>aespa</title>
+    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -85,7 +86,7 @@
                 <h3>NING NING<br>
                 <br>Birth Name: Ning Yizhuo (宁艺卓)
                 <br>Birthday: October 23, 2002
-                <br>Position: Main Vocalist, Maknae
+                <br>Position: 
                 </h3>
             </div>
         </div>
