fully added myworld albums with text

--- a/Merchandise.html
+++ b/Merchandise.html
@@ -52,13 +52,13 @@
                 <div class="image-containermyworld">
                     <a href="https://weverseshop.io/en/shop/GL_USD/artists/133/sales/17931"><img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/myworldintrover.webp"></a>
                     <a href="https://weverseshop.io/en/shop/GL_USD/artists/133/sales/17936"><img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/myworldposterver.webp"></a>
-                    <a href="https://weverseshop.io/en/shop/GL_USD/artists/133/sales/17941"><img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/myworldzinever.jpg"></a>
+                    <a href="https://weverseshop.io/en/shop/GL_USD/artists/133/sales/17941"><img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/aespa-zine-cover.jpg"></a>
                 </div>
 
                 <div class="text-containermyworld">
-                    <p class="description">The 4th Mini Album 'Drama' - Drama Version </p>
-                    <p class="description">The 4th Mini Album 'Drama' - Scene Version</p>
-                    <p class="description">The 4th Mini Album 'Drama' - Giant Version</p>
+                    <p class="description">The 3rd Mini Album 'MY WORLD' - Intro Version</p>
+                    <p class="description">The 3rd Mini Album 'MY WORLD' - Poster Version</p>
+                    <p class="description">The 3rd Mini Album 'MY WORLD' - Zine Version</p>
                 </div>
 
                 <a href="https://weverseshop.io/en/shop/GL_USD/artists/133/categories/2498"><button class="buy-now-btn">See all items</button></a><br><br><br><br><br>
