savage and girls albums added

--- a/Merchandise.html
+++ b/Merchandise.html
@@ -38,9 +38,9 @@
 
             <div class="merchandisepic">
                 <div class="image-container">
-                    <a href="https://weverseshop.io/en/shop/GL_USD/artists/133/sales/18577"><img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/aesdadramaver.jpg"></a>
-                    <a href="https://weverseshop.io/en/shop/GL_USD/artists/133/sales/18580"><img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/aespadramascene.jpg"></a>
-                    <a href="https://weverseshop.io/en/shop/GL_USD/artists/133/sales/18578"><img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/aespadramagiant.jpg"></a>
+                    <a href="https://smglobalshop.com/collections/aespa/products/pre-order-aespa-the-4th-mini-album-drama-drama-vers"><img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/aesdadramaver.jpg"></a>
+                    <a href="https://smglobalshop.com/collections/aespa/products/pre-order-aespa-the-4th-mini-album-drama-scene-ver-random"><img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/aespadramascene.jpg"></a>
+                    <a href="https://smglobalshop.com/collections/aespa/products/pre-order-aespa-the-4th-mini-album-drama-giant-vers"><img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/aespadramagiant.jpg"></a>
                 </div>
 
                 <div class="text-container">
@@ -50,18 +50,37 @@
                 </div>
 
                 <div class="image-containermyworld">
-                    <a href="https://weverseshop.io/en/shop/GL_USD/artists/133/sales/17931"><img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/myworldintrover.webp"></a>
-                    <a href="https://weverseshop.io/en/shop/GL_USD/artists/133/sales/17936"><img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/myworldposterver.webp"></a>
-                    <a href="https://weverseshop.io/en/shop/GL_USD/artists/133/sales/17941"><img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/aespa-zine-cover.jpg"></a>
+                    <a href="https://smglobalshop.com/collections/aespa/products/pre-order-aespa-the-3rd-mini-album-my-world-intro-version"><img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/myworldintrover.webp"></a>
+                    <a href="https://smglobalshop.com/collections/aespa/products/pre-order-aespa-the-3rd-mini-album-my-world-tabloid-version-d2c-exclusive"><img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/aespa_MYWORLD_ALBUM_Tabloid_Ver_01_770x770_crop_center.webp"></a>
+                    <a href="https://smglobalshop.com/collections/aespa/products/pre-order-aespa-the-3rd-mini-album-my-world-zine-version"><img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/aespa-zine-cover.jpg"></a>
                 </div>
 
                 <div class="text-containermyworld">
                     <p class="description">The 3rd Mini Album 'MY WORLD' - Intro Version</p>
-                    <p class="description">The 3rd Mini Album 'MY WORLD' - Poster Version</p>
+                    <p class="description">[EXCLUSIVE] The 3rd Mini Album 'MY WORLD' <br>- Tabloid Version</p>
                     <p class="description">The 3rd Mini Album 'MY WORLD' - Zine Version</p>
                 </div>
 
-                <a href="https://weverseshop.io/en/shop/GL_USD/artists/133/categories/2498"><button class="buy-now-btn">See all items</button></a><br><br><br><br><br>
+                
+                <div class="image-containeraccessories">
+                    <a href="https://smglobalshop.com/collections/aespa/products/pre-order-aespa-the-2nd-mini-album-girls-kwangya-ver"><img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/aespa-the-2nd-mini-album-girls-kwangya-ver-412610_770x770_crop_center.webp"></a>
+                    <a href="https://smglobalshop.com/collections/aespa/products/pre-order-aespa-the-2nd-mini-album-girls-real-world-ver"><img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/aespa-the-2nd-mini-album-girls-real-world-ver-840062_770x770_crop_center.webp"></a>
+                    <a href="https://smglobalshop.com/collections/aespa/products/pre-order-aespa-the-1st-mini-album-savage-photobook-ver"><img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/aespa-the-1st-mini-album-savage-hallucination-quest-ver-151170_960x_crop_center.webp"></a>
+
+                </div>
+
+                <div class="text-containeraccessories">
+                    <p class="description">The 2nd Mini Album - Girls KWANGYA Version</p>
+                    <p class="description">The 2nd Mini Album - Girls Real World Version</p>
+                    <p class="description">The 1st Mini Album - Savage Hallucination<br>Quest Version</p>
+
+                </div>
+
+
+                    <br><br><br>
+                <a href="https://smglobalshop.com/collections/aespa#"><button class="buy-now-btn">See all items</button></a><br><br><br><br><br>
+
+
 
                 </div>
               
