--- a/Merchandise.html
+++ b/Merchandise.html
@@ -17,7 +17,7 @@
     <section class="header">
         </div>
         <nav>
-            <a href="https://www.youtube.com/@aespa"><img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/Aespa_logo.jpg"></a>
+            <a href="https://www.youtube.com/@aespa"><img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/aespalogo-removebg.png"></a>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
