--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <div class="row">
         <div class="mem-pic">
-            <img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/karina.jpg"><alt></alt>
+            <img class="lead-pic" src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/karina.jpg"><alt></alt>
             <div class="layer">
                 <h3>KARINA<br>
                     <br>Birth Name: Yu Ji Min (유지민)
