changed merchandise text

--- a/Merchandise.html
+++ b/Merchandise.html
@@ -30,7 +30,7 @@
         </nav>
 
 
-<div class="main-text">
+<div class="merch-text">
     <h1>MERCHANDISE</h1><br><br><br><br><br><br><br><br><br><br>
 </div>
 
