--- a/Merchandise.html
+++ b/Merchandise.html
@@ -38,9 +38,9 @@
 
             <div class="merchandisepic">
                 <div class="image-container">
-                    <a href="https://smglobalshop.com/collections/aespa/products/pre-order-aespa-the-4th-mini-album-drama-drama-vers"><img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/aesdadramaver.jpg"></a>
-                    <a href="https://smglobalshop.com/collections/aespa/products/pre-order-aespa-the-4th-mini-album-drama-scene-ver-random"><img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/aespadramascene.jpg"></a>
-                    <a href="https://smglobalshop.com/collections/aespa/products/pre-order-aespa-the-4th-mini-album-drama-giant-vers"><img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/aespadramagiant.jpg"></a>
+                    <a href="https://smglobalshop.com/collections/aespa/products/pre-order-aespa-the-4th-mini-album-drama-drama-vers"><img src="Images/aesdadramaver.jpg"></a>
+                    <a href="https://smglobalshop.com/collections/aespa/products/pre-order-aespa-the-4th-mini-album-drama-scene-ver-random"><img src="Images/aespadramascene.jpg"></a>
+                    <a href="https://smglobalshop.com/collections/aespa/products/pre-order-aespa-the-4th-mini-album-drama-giant-vers"><img src="Images/aespadramagiant.jpg"></a>
                 </div>
 
                 <div class="text-container">
@@ -50,9 +50,9 @@
                 </div>
 
                 <div class="image-containermyworld">
-                    <a href="https://smglobalshop.com/collections/aespa/products/pre-order-aespa-the-3rd-mini-album-my-world-intro-version"><img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/myworldintrover.webp"></a>
-                    <a href="https://smglobalshop.com/collections/aespa/products/pre-order-aespa-the-3rd-mini-album-my-world-tabloid-version-d2c-exclusive"><img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/aespa_MYWORLD_ALBUM_Tabloid_Ver_01_770x770_crop_center.webp"></a>
-                    <a href="https://smglobalshop.com/collections/aespa/products/pre-order-aespa-the-3rd-mini-album-my-world-zine-version"><img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/aespa-zine-cover.jpg"></a>
+                    <a href="https://smglobalshop.com/collections/aespa/products/pre-order-aespa-the-3rd-mini-album-my-world-intro-version"><img src="Images/myworldintrover.webp"></a>
+                    <a href="https://smglobalshop.com/collections/aespa/products/pre-order-aespa-the-3rd-mini-album-my-world-tabloid-version-d2c-exclusive"><img src="Images/aespa_MYWORLD_ALBUM_Tabloid_Ver_01_770x770_crop_center.webp"></a>
+                    <a href="https://smglobalshop.com/collections/aespa/products/pre-order-aespa-the-3rd-mini-album-my-world-zine-version"><img src="Images/aespa-zine-cover.jpg"></a>
                 </div>
 
                 <div class="text-containermyworld">
@@ -63,9 +63,9 @@
 
                 
                 <div class="image-containeraccessories">
-                    <a href="https://smglobalshop.com/collections/aespa/products/pre-order-aespa-the-2nd-mini-album-girls-kwangya-ver"><img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/aespa-the-2nd-mini-album-girls-kwangya-ver-412610_770x770_crop_center.webp"></a>
-                    <a href="https://smglobalshop.com/collections/aespa/products/pre-order-aespa-the-2nd-mini-album-girls-real-world-ver"><img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/aespa-the-2nd-mini-album-girls-real-world-ver-840062_770x770_crop_center.webp"></a>
-                    <a href="https://smglobalshop.com/collections/aespa/products/pre-order-aespa-the-1st-mini-album-savage-photobook-ver"><img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/aespa-the-1st-mini-album-savage-hallucination-quest-ver-151170_960x_crop_center.webp"></a>
+                    <a href="https://smglobalshop.com/collections/aespa/products/pre-order-aespa-the-2nd-mini-album-girls-kwangya-ver"><img src="Images/aespa-the-2nd-mini-album-girls-kwangya-ver-412610_770x770_crop_center.webp"></a>
+                    <a href="https://smglobalshop.com/collections/aespa/products/pre-order-aespa-the-2nd-mini-album-girls-real-world-ver"><img src="Images/aespa-the-2nd-mini-album-girls-real-world-ver-840062_770x770_crop_center.webp"></a>
+                    <a href="https://smglobalshop.com/collections/aespa/products/pre-order-aespa-the-1st-mini-album-savage-photobook-ver"><img src="Images/aespa-the-1st-mini-album-savage-hallucination-quest-ver-151170_960x_crop_center.webp"></a>
 
                 </div>
 
