--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <section class="header">
         <nav>
-            <a href="https://www.youtube.com/@aespa"><img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/aespalogo-removebg.png"></a>
+            <a href="https://www.youtube.com/@aespa"><img src="Images/aespalogo-removebg.png"></a>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
@@ -51,7 +51,7 @@
 
     <div class="row">
         <div class="mem-pic">
-            <img class="lead-pic" src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/karina.jpg"><alt></alt>
+            <img class="lead-pic" src="Images/karina.jpg"><alt></alt>
             <div class="layer">
                 <h3>KARINA<br>
                     <br>Birth Name: Yu Ji Min (유지민)
@@ -61,7 +61,7 @@
             </div>
         </div>
         <div class="mem-pic">
-            <img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/winter.jpg">
+            <img src="Images/winter.jpg">
             <div class="layer">
                 <h3>WINTER<br>
                 <br>Birth Name: Kim Min Jeong (김민정)
@@ -71,7 +71,7 @@
             </div>
         </div>
         <div class="mem-pic">
-            <img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/giselle.jpg">
+            <img src="Images/giselle.jpg">
             <div class="layer">
                 <h3>GISELLE<br>
                 <br>Birth Name: Uchinaga Aeri (うちながえり/우치나가에리)
@@ -81,7 +81,7 @@
             </div>
         </div>
         <div class="mem-pic">
-            <img src="/Users/terrence/Desktop/Immersive_Media/Interactive_Development/-aespa-/Images/ningning.jpg">
+            <img src="Images/ningning.jpg">
             <div class="layer">
                 <h3>NING NING<br>
                 <br>Birth Name: Ning Yizhuo (宁艺卓)
