--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <h3>KARINA<br>
                     <br>Birth Name: Yu Ji Min (유지민)
                     <br>Birthday: April 11, 2000
-                    <br>Position: Leader, Dancer, Vocalist, Rapper, Visual
+                    <br>Position: Leader, Main Dancer, Lead Rapper, FOTG
                 </h3>
             </div>
         </div>
@@ -66,7 +66,7 @@
                 <h3>WINTER<br>
                 <br>Birth Name: Kim Min Jeong (김민정)
                 <br>Birthday: January 1, 2001
-                <br>Position: Vocalist, Dancer
+                <br>Position:  Lead Dancer, Lead Vocal, Visual
                 </h3>
             </div>
         </div>
@@ -76,7 +76,7 @@
                 <h3>GISELLE<br>
                 <br>Birth Name: Uchinaga Aeri (うちながえり/우치나가에리)
                 <br>Birthday: October 30, 2000
-                <br>Position: Rapper, Vocalist
+                <br>Position: Main Rapper, Sub Vocalist
                 </h3>
             </div>
         </div>
@@ -86,7 +86,7 @@
                 <h3>NING NING<br>
                 <br>Birth Name: Ning Yizhuo (宁艺卓)
                 <br>Birthday: October 23, 2002
-                <br>Position: 
+                <br>Position: Main Vocal, Maknae
                 </h3>
             </div>
         </div>
