new background image

--- a/Merchandise.html
+++ b/Merchandise.html
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-    <section class="header">
+    <section class="header1">
         </div>
         <nav>
             <a href="https://www.youtube.com/@aespa"><img src="Images/aespalogo-removebg.png"></a>
@@ -28,10 +28,10 @@
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
-
+    
 
 <div class="merch-text">
-    <h1>MERCHANDISE</h1><br><br><br><br><br><br><br><br><br><br>
+    <h1>MERCHANDISE</h1><br><br><br><br><br><br><br>
 </div>
 
         <div class="merchandise">
