changed index page

--- a/index.html
+++ b/index.html
@@ -29,9 +29,12 @@
         </nav>
 <br><br>
 <div class="text-box">
-    <p>The meaning of aespa has multiple meanings, with the use of æ standing for both "Avatar X Experience"<br> as well as becoming an "aspect" being both sides. Another 
-        meaning of aespa is meeting another avatar of yourself <br>and experiencing a new world,
-        "you always perform at your best despite fear and doubts", and "beauty & aesthetic".
+    <p>aespa, a combination of "ae", which stands for "Avatar and Experience" <br> and "aspect" meaning "two-sidedness", 
+        symbolizes "meeting of another self and <br> experiencing a new world" and consists of four real members <br> KARINA, WINTER, GISELLE, 
+        and NINGNING along with avatar members of each. <br><br><br><br>
+        The group debuted in November 2020 with a single 'Black Mamba'. <br> 
+        The song entered the Billboard Global Chart (excluding U.S.) at No. <br> 
+        100 within just 3 days, marking the highest ranking of any K-pop artist's debut song.
     </p>
 <br><br><br><br><br>
 
